Trying to fix mobile image stretching

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -26,7 +26,8 @@
 }
 
 .projImg{
-  max-height: 100px;
+  height: 200px;
+  width: 100%;
   object-fit: cover;
 }
 
